--- a/app/src/main/res/layout/activity_main_functions.xml
+++ b/app/src/main/res/layout/activity_main_functions.xml
@@ -71,5 +71,12 @@
             android:textSize="16sp" />
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="40dp"
+        android:onClick="payDebt"
+        android:text="@string/pay_debt"
+        android:textSize="16sp" />
 
 </LinearLayout>
