--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,11 @@
         <item name="android:paddingBottom">80dp</item>
     </style>
 
+    <style name="regularText">
+        <item name="android:gravity">right</item>
+        <item name="android:padding">@dimen/small_padding</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
