--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     </style>
 
     <style name="regularText">
+        <item name="android:textColor">@color/colorAccent</item>
         <item name="android:gravity">right</item>
         <item name="android:padding">@dimen/small_padding</item>
         <item name="android:textAlignment">center</item>
