--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,6 +24,14 @@
         android:inputType="textEmailAddress" />
 
     <EditText
+        android:id="@+id/displayName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:hint="@string/display_name_hint"
+        android:inputType="textEmailAddress" />
+
+    <EditText
 
         android:id="@+id/passwordSignUp"
         android:layout_width="match_parent"
@@ -45,8 +53,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="submit"
         android:layout_marginBottom="10dp"
+        android:onClick="submit"
         android:padding="@dimen/small_padding"
         android:text="@string/sign_up" />
 
