--- a/app/src/main/res/layout/fragment_game_start.xml
+++ b/app/src/main/res/layout/fragment_game_start.xml
@@ -15,7 +15,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
         android:text="@string/create_game"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/continueGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="40dp"
+        android:text="@string/continue_game"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/join"
@@ -23,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
         android:text="@string/join_game"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:visibility="gone" />
 
 
 </LinearLayout>
