--- a/app/src/main/res/layout/fragment_game_start.xml
+++ b/app/src/main/res/layout/fragment_game_start.xml
@@ -10,7 +10,7 @@
     tools:context=".Game.GameStartFragment">
 
     <Button
-        android:id="@+id/create"
+        android:id="@+id/createGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
@@ -29,7 +29,7 @@
         android:visibility="gone" />
 
     <Button
-        android:id="@+id/join"
+        android:id="@+id/joinGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
