--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,25 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="60">
 
     <TextView
         android:id="@+id/name"
         style="@style/regularText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="30"
+        android:padding="@dimen/small_padding" />
 
-    <TextView
-        android:id="@+id/endavans"
-        style="@style/regularText"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:padding="@dimen/small_padding">
 
-    <TextView
-        android:id="@+id/debt"
-        style="@style/regularText"
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/euro"
+            android:tint="@color/white" />
+
+
+        <TextView
+            android:id="@+id/endavans"
+            style="@style/regularText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:padding="@dimen/small_padding">
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/debt"
+            android:tint="@color/white" />
+
+        <TextView
+            android:id="@+id/debt"
+            style="@style/regularText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:padding="@dimen/small_padding">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/lifesaver"
+            android:tint="@color/white" />
+
+        <TextView
+            android:id="@+id/lifeSavers"
+            style="@style/regularText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
