--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,18 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="smallText">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">right</item>
+        <!--<item name="android:padding">@dimen/small_padding</item> -->
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="icon">
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:tint">@color/white</item>
+    </style>
+
 </resources>
