--- a/app/src/main/res/layout/fragment_game_start.xml
+++ b/app/src/main/res/layout/fragment_game_start.xml
@@ -7,7 +7,7 @@
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".Game.GameStartFragment">
+    tools:context=".Game.Views.GameStartFragment">
 
     <Button
         android:id="@+id/createGame"
