--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="small_padding">10dp</dimen>
+    <dimen name="padding">15dp</dimen>
     <dimen name="padding_functions">10dp</dimen>
 </resources>
