--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -3,15 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center|center_horizontal"
+    android:gravity="top|center_horizontal"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="40dp"
     tools:context=".UserProfile.ProfileFragment">
 
     <ImageView
         android:id="@+id/profilePic"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 
 
     <LinearLayout
@@ -19,56 +21,80 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <EditText
             android:id="@+id/name"
+            style="@style/regularText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loading"
-            style="@style/regularText" />
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="@string/loading" />
 
     </LinearLayout>
 
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="2"
+        android:columnCount="3"
         android:gravity="center|center_horizontal"
         android:orientation="vertical"
+        android:paddingTop="20dp"
         android:rowCount="2">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/small_padding"
-            android:text="@string/debt" />
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginHorizontal="14dp"
+            android:src="@drawable/debt"
+            android:tint="@color/white" />
 
         <TextView
             android:id="@+id/debt"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/small_padding"
+            android:layout_marginHorizontal="@dimen/small_padding"
             android:text="@string/_0"
             android:textAlignment="center" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/small_padding"
-            android:text="@string/endavans" />
+        <ImageView
+            style="@style/icon"
+            android:layout_width="18dp"
+            android:layout_marginHorizontal="20dp"
+            android:src="@drawable/euro" />
 
         <TextView
             android:id="@+id/endavans"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/small_padding"
+            android:layout_marginHorizontal="@dimen/small_padding"
+            android:text="@string/_0"
+            android:textAlignment="center" />
+
+        <ImageView
+            style="@style/icon"
+            android:layout_marginHorizontal="@dimen/small_padding"
+            android:src="@drawable/lifesaver" />
+
+        <TextView
+            android:id="@+id/lifesavers"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/small_padding"
             android:text="@string/_0"
             android:textAlignment="center" />
 
     </GridLayout>
 
-
+    <Button
+        android:id="@+id/endEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done edition"
+        android:visibility="gone" />
 
 
 </LinearLayout>
