--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/editProfile"
+        android:title="@string/editProfile" />
+    <item
         android:id="@+id/signout"
         android:title="@string/signout" />
+
 
 </menu>
