--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,14 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="smallTextProfile">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">right</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginRight">@dimen/padding</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="icon">
         <item name="android:layout_width">20dp</item>
         <item name="android:layout_height">20dp</item>
