--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="10dp"
     tools:context=".Game.Views.GameActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_user_list"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="vertical"
-        android:paddingTop="20dp">
+        android:layout_height="220dp"
+        android:orientation="vertical">
 
     </android.support.v7.widget.RecyclerView>
 
