--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="small_padding">10dp</dimen>
     <dimen name="padding">15dp</dimen>
     <dimen name="padding_functions">10dp</dimen>
+    <dimen name="bottom_margin">50dp</dimen>
 </resources>
