--- a/app/src/main/res/layout/activity_main_functions.xml
+++ b/app/src/main/res/layout/activity_main_functions.xml
@@ -52,7 +52,7 @@
 
 
         <EditText
-            android:id="@+id/withdrawEndavans"
+            android:id="@+id/editTextHelperDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
