--- a/app/src/main/res/layout/helper_dialog.xml
+++ b/app/src/main/res/layout/helper_dialog.xml
@@ -12,6 +12,7 @@
         android:layout_weight="50"
         android:hint="@string/endavans_to_withdraw"
         android:inputType="number"
+        android:maxLength="7"
         android:padding="@dimen/padding_functions"
         android:textSize="16sp" />
 
