--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -7,21 +7,21 @@
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".MainFunctionsActivity">
+    tools:context=".Game.Views.GameStartFragment">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tell your friends to scan this code to join:" />
+        android:textSize="40sp"
+        android:layout_margin="@dimen/small_padding"/>
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="300dp"
-        android:background="@color/white"
-        android:layout_height="300dp" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start game"
-        android:onClick="startGame"/>
+        android:text="Close"
+        android:onClick="finishGetStarted"
+        />
+
+
 </LinearLayout>
