--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,8 +30,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/GridLayout1"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="200"
+        android:layout_height="match_parent"
+
+        android:layout_weight="100"
         android:columnCount="2"
         android:orientation="horizontal"
         android:rowCount="2"
@@ -42,48 +42,51 @@
             android:id="@+id/depositButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="50"
-            android:layout_rowWeight="50"
+            android:layout_columnWeight="25"
+            android:layout_rowWeight="25"
             android:enabled="false"
             android:onClick="depositEndavans"
             android:padding="@dimen/padding_functions"
             android:text="@string/deposit_endavans"
-            android:textSize="16sp" />
+            android:textSize="10sp" />
 
 
         <Button
             android:id="@+id/withdrawButton"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="50"
-            android:layout_rowWeight="50"
+            android:layout_columnWeight="25"
+            android:layout_rowWeight="25"
             android:enabled="false"
             android:onClick="withdrawEndavans"
             android:padding="@dimen/padding_functions"
             android:text="@string/withdraw_endavans"
-            android:textSize="16sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/payDebtButton"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="50"
-            android:layout_rowWeight="50"
+            android:layout_columnWeight="25"
+            android:layout_rowWeight="25"
             android:enabled="false"
             android:onClick="payDebt"
             android:text="@string/pay_debt"
-            android:textSize="16sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/useLifeSaver"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="50"
-            android:layout_rowWeight="50"
+            android:layout_columnWeight="25"
+            android:layout_rowWeight="25"
             android:enabled="false"
             android:onClick="useLifeSaver"
             android:text="@string/use_life_saver"
-            android:textSize="16sp" />
+            android:textSize="10sp" />
 
 
     </GridLayout>
