--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -13,35 +13,32 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
 
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/name"
+        style="@style/regularText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="Join or create a game first" />
 
-        <EditText
-            android:id="@+id/name"
-            style="@style/regularText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:text="@string/loading" />
-
-    </LinearLayout>
 
     <GridLayout
+        android:id="@+id/profileLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="3"
         android:gravity="center|center_horizontal"
         android:orientation="vertical"
         android:paddingTop="20dp"
-        android:rowCount="2">
+        android:rowCount="2"
+        android:visibility="gone">
 
 
         <ImageView
@@ -101,7 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
 </LinearLayout>
