--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF8C00</color>
 
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="orange">#FF8C00</color>
     <color name="gray">#696969</color>
 </resources>
