--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,7 +6,7 @@
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".Game.Views.GameActivity">
+    tools:context=".game.views.GameActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_user_list"
