--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -7,7 +7,7 @@
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".UserProfile.UserProfileActivity">
+    tools:context=".userprofile.UserProfileActivity">
 
     <ImageView
         android:id="@+id/profilePic"
