--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -7,7 +7,7 @@
     android:gravity="center|center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".Game.Views.GameStartFragment">
+    tools:context=".game.views.GameStartFragment">
 
     <TextView
         android:id="@+id/textView"
