--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,7 +6,7 @@
     android:gravity="top|center_horizontal"
     android:orientation="vertical"
     android:padding="40dp"
-    tools:context=".UserProfile.ProfileFragment">
+    tools:context=".userprofile.ProfileFragment">
 
     <ImageView
         android:id="@+id/profilePic"
