--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_global"
+        android:id="@+id/navigation_leaderboard"
         android:icon="@drawable/ic_global"
-        android:title="@string/title_global" />
+        android:title="@string/title_leaderboard" />
 
     <item
         android:id="@+id/navigation_play"
